--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,7 +11,7 @@ font pango:monospace 8
 floating_modifier $mod
 
 # screenshot
-bindsym $mod+Shift+s exec deepin-screenshot
+bindsym $mod+Shift+s exec xfce4-screenshooter -r -c
 
 # start a terminal
 bindsym $mod+Return exec alacritty
