--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,6 +20,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
+bindsym $mod+o exec dmenu_run
 bindsym $mod+p exec dmenu_run
 
 # change focus
