--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,15 +1,22 @@
 {
   "dependencies": {
-    "coc-clangd": ">=0.7.0",
-    "coc-cmake": ">=0.1.0",
+    "coc-clangd": ">=0.14.0",
+    "coc-cmake": ">=0.1.1",
     "coc-css": ">=1.2.6",
-    "coc-diagnostic": ">=0.18.0",
-    "coc-go": ">=0.13.2",
+    "coc-cssmodules": ">=1.1.1",
+    "coc-diagnostic": ">=0.22.1",
+    "coc-eslint": ">=1.4.5",
+    "coc-explorer": ">=0.18.16",
+    "coc-go": ">=0.13.3",
+    "coc-highlight": ">=1.2.8",
     "coc-html": ">=1.4.1",
-    "coc-json": ">=1.3.2",
+    "coc-json": ">=1.3.6",
+    "coc-prettier": ">=1.1.24",
     "coc-python": ">=1.2.13",
-    "coc-rust-analyzer": ">=0.27.0",
+    "coc-rust-analyzer": ">=0.50.0",
     "coc-sh": ">=0.6.0",
-    "coc-tsserver": ">=1.6.7"
+    "coc-tsserver": ">=1.8.6",
+    "coc-vetur": ">=1.2.5",
+    "coc-vimtex": ">=1.0.4"
   }
 }
