--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -17,6 +17,8 @@
     "coc-sh": ">=0.6.0",
     "coc-tsserver": ">=1.8.6",
     "coc-vetur": ">=1.2.5",
-    "coc-vimtex": ">=1.0.4"
+    "coc-vimtex": ">=1.0.4",
+    "coc-webpack": ">=1.5.0",
+    "coc-yaml": ">=1.4.2"
   }
 }
